--- a/travlerPage.html
+++ b/travlerPage.html
@@ -129,9 +129,7 @@
          </h2>
                  
         <p style="text-align: center;">
-
-        אפשר לסובב את המכשיר וללחוץ על הנקודות השונות
-        כדי להכיר את מבנה האירדוק
+לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
         </p> 
             
      </li> 
