--- a/adult.html
+++ b/adult.html
@@ -153,8 +153,7 @@
      
  <h2 style="text-align: center; color: grey;">נא להכיר: מכשיר האירדוק</h2>
  <p style="text-align: center;">
-     אפשר לסובב את המכשיר וללחוץ על הנקודות השונות
-     כדי להכיר את מבנה האירדוק
+  לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
  </p>
 
  <div class="viewer-container-introdocs">
