--- a/doctorPage.html
+++ b/doctorPage.html
@@ -206,8 +206,7 @@
                  
         <p style="text-align: center;">
 
-        אפשר לסובב את המכשיר וללחוץ על הנקודות השונות
-        כדי להכיר את מבנה האירדוק
+   לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
         </p > 
             
      </li> 
