--- a/kidsPage.html
+++ b/kidsPage.html
@@ -131,8 +131,7 @@
      <br>
     <h2 style="color: blueviolet; text-align: center;">נא להכיר: מכשיר האירדוק</h2>
     <p style="text-align: center;">
-        אפשר לסובב את המכשיר וללחוץ על הנקודות השונות
-        כדי להכיר את מבנה האירדוק
+      לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
     </p>
 
 
