--- a/travlerPage.html
+++ b/travlerPage.html
@@ -87,7 +87,9 @@
             <li>
                 <h2 style="color: orange;" >  לחץ באוזניים בטיסות - למה זה קורה לנו?</h2>
                 <p>
-                    תחושת לחץ באוזניים במהלך טיסה נוצרת בעיקר בהמראה ובנחיתה, כתוצאה מהפרש הלחצים בין האוויר הסביבתי לאוויר הכלוא בחלל האוזן התיכונה.                </p>
+                    תחושת לחץ באוזניים במהלך טיסה נוצרת בעיקר בהמראה ובנחיתה, כתוצאה מהפרש הלחצים בין האוויר הסביבתי לאוויר הכלוא בחלל האוזן התיכונה.
+                    לא להיות בלחץ! ישש לנו פתרון...
+                </p>
             </li>
 
            
