--- a/travlerPage.html
+++ b/travlerPage.html
@@ -173,7 +173,7 @@
 </div>
   
   <div class="viewer-container-introdoc-mobile">
-      <iframe src="./mobile-fly-code/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+      <iframe src="./flyMobile/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
   
 </div>
   
