--- a/adult.html
+++ b/adult.html
@@ -140,7 +140,10 @@
 <h2 style="text-align: center; color: grey;">
 כיצד האירדוק משפיע על האוזן?
 </h2>
-
+ <p style="text-align: center;">
+לחיצה על כל אייקון תחשוף מידע על החלק באוזן.
+אבל איך הוא עובד? לחצו על הכפתור כדי לגלות...
+ </p>
 <div class="viewer-container-introdocs">
   <iframe src="./web-earanatomy/story.html" width="100%" height="700" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
 
