--- a/swimmers.html
+++ b/swimmers.html
@@ -113,6 +113,7 @@
   כיצד האירדוק משפיע על האוזן?
   </h2>
    <p style="text-align: center;">
+       כשהגלים מתחזקים, האירדוק מתגלה...
 לחיצה על כל אייקון תחשוף מידע על החלק באוזן.
 אבל איך הוא עובד? לחצו על הכפתור כדי לגלות...
  </p>
