--- a/travlerPage.html
+++ b/travlerPage.html
@@ -165,6 +165,11 @@
 
 <h2 style="text-align: center; color: orange; ">איך לתפעל את האירדוק צעד אחר צעד</h2>
 <br>
+        <p style="text-align: center;">
+אחרי שהבנו איך האירדוק משפיע על האוזן בזמן הטיסה, הגיע הזמן ללמוד איך להשתמש בו נכון!
+
+אל חשש, זה לא מסובך כמו להטיס מטוס - תוכלו ללמוד הכל ב- 4 צעדים פשוטים.
+        </p> 
 
 
 
