--- a/travlerPage.html
+++ b/travlerPage.html
@@ -156,7 +156,7 @@
 
 <br>
 
-
+<br>
 
 
 
@@ -164,11 +164,11 @@
 
 
 <h2 style="text-align: center; color: orange; ">איך לתפעל את האירדוק צעד אחר צעד</h2>
-<br>
+
         <p style="text-align: center;">
 אחרי שהבנו איך האירדוק משפיע על האוזן בזמן הטיסה, הגיע הזמן ללמוד איך להשתמש בו נכון!
 
-אל חשש, זה לא מסובך כמו להטיס מטוס - תוכלו ללמוד הכל ב- 4 צעדים פשוטים.
+אל דאגה, זה לא מסובך כמו להטיס מטוס - תוכלו ללמוד הכל ב 4 צעדים פשוטים.
         </p> 
 
 
