--- a/doctorPage.html
+++ b/doctorPage.html
@@ -269,7 +269,7 @@
 
 <div class="viewer-container-introdoc-mobile">
 
-  <iframe src="./doc-mobile-code/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+  <iframe src="./doc-mobile/story.html" width="90%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
 </div>
 
 
