--- a/Homepage.html
+++ b/Homepage.html
@@ -163,17 +163,6 @@
 </div>
 
 
-<!-- <div id="popup" class="popup">
-    <div class="popup-content">
-        <button type="button" class="btn-close" aria-label="Close" onclick="closePopup()" style="margin-left: 100%;"></button>
-        <div class="flex-container-popup">
-            <h2 id="popup-title"></h2>
-             <img id="popup-flag" src="" alt="Country flag" class="flag">
-        </div>
-        <iframe id="video-iframe" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
-</div> -->
-
 <div id="popup" class="popup">
     <div class="popup-content">
         <button type="button" class="btn-close" aria-label="Close" onclick="closePopup()" style="margin-left: 100%;"></button>
@@ -182,7 +171,7 @@
             <img id="popup-flag" src="" alt="Country flag" class="flag">
         </div>
         <p id="popup-sentence" style="text-align: center;"></p> <!-- New element for the sentence -->
-        <iframe id="video-iframe" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe id="video-iframe" style="height:  66%;" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
 
