--- a/adult.html
+++ b/adult.html
@@ -156,7 +156,7 @@
      
  <h2 style="text-align: center; color: grey;">נא להכיר: מכשיר האירדוק</h2>
  <p style="text-align: center;">
-  לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
+  לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להזיז את הסליידר כדי לסובב את המכשיר.
  </p>
 
  <div class="viewer-container-introdocs">
