--- a/doctorPage.html
+++ b/doctorPage.html
@@ -210,7 +210,7 @@
                  
         <p style="text-align: center;">
 
-   לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
+   לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להזיז את הסליידר כדי לסובב את המכשיר.
         </p > 
             
      </li> 
