--- a/kidsPage.html
+++ b/kidsPage.html
@@ -128,7 +128,7 @@
      <br>
     <h2 style="color: blueviolet; text-align: center;">נא להכיר: מכשיר האירדוק</h2>
     <p style="text-align: center;">
-      לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
+      לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להזיז את הסליידר כדי לסובב את המכשיר.
     </p>
 
 
