--- a/swimmers.html
+++ b/swimmers.html
@@ -132,7 +132,7 @@
 
     <h2 style="text-align: center; color: #0B8492;">נא להכיר: מכשיר האירדוק</h2>
     <p style="text-align: center;">
-      לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
+      לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להזיז את הסליידר כדי לסובב את המכשיר.
     </p>
 
 
