--- a/travlerPage.html
+++ b/travlerPage.html
@@ -134,7 +134,7 @@
          </h2>
                  
         <p style="text-align: center;">
-לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להוזיז את הסליידר כדי לסובב את המכשיר.
+לחיצה על כל אייקון תחשוף הסבר על אותו חלק, ואפשר להזיז את הסליידר כדי לסובב את המכשיר.
         </p> 
             
      </li> 
