--- a/kidsPage.html
+++ b/kidsPage.html
@@ -169,7 +169,7 @@
                   <strong>אם הילד/ה חושש/ת מהשימוש במכשיר</strong>
                   <br>
                   תוכל להראות לילדכם/ן סרטונים של ילדים אחרים שהשתמשו במכשיר
-                            <span onclick="showPopup('Israel')" style="cursor: pointer; text-decoration: underline; color: blue;">לחצו כאן לצפייה בהמלצה</span>
+                            <span onclick="showPopup('Israel')" style="cursor: pointer; text-decoration: underline; color: #761dd5;     font-family: 'Assistant-bold';">לחצו כאן לצפייה בהמלצה</span>
               </p>
           </div>
       </li>
