--- a/Homepage.html
+++ b/Homepage.html
@@ -99,7 +99,8 @@
 
 
             <div class="list-wrapper" >
-                <p style="text-align: center;">בשביל שנוכל להתאים לך את ההדרכה באופן אישי, בחר/י את האפשרות המתאימה לך</p>
+         <h2 style="text-align: center;" id="recommendations-section">בשביל שנוכל להתאים לך את ההדרכה באופן אישי </h2>
+        <p style="text-align: center;">ניתן לבחור באפשרות המתאימה לך</p>
                 <ul class="list">
     
                     <li class="item">
