--- a/Homepage.html
+++ b/Homepage.html
@@ -150,7 +150,7 @@
          <!-- המלצות מהעולם -->
 <br>
 
-<h2 style="text-align: center;" id="recommendations-section">המלצות מהעולם</h2>
+<h2 style="text-align: center;" id="recommendations-section">מהמזרח הרחוק עד המערב, כבר שמעו על מכשיר האירדוק </h2>
         <p style="text-align: center;">לחיצה על המיקום תחשוף סרטון המלצה מאותו אזור בעולם</p>
 <br>
 <div class="map-container">
