--- a/doctorPage.html
+++ b/doctorPage.html
@@ -303,7 +303,7 @@
 
     <li>
        <p style="    text-align:right;">
-            <span style="font-weight: bold;">
+            <span style="font-weight: bold;     font-family: 'Assistant-Bold';">
                 מאושר ע"י משרד הבריאות ו - "FDA"
             </span>
             <br>
