--- a/doctorPage.html
+++ b/doctorPage.html
@@ -288,7 +288,7 @@
 <ul class="flex-container-opening-doc-research">
     <li>
         <p style="    text-align:right;">
-מטופלים שהשתמשו באירדוק דיווחו על הקלה משמעותית בכאב, הפחתה בנזילת נוזלים מהאוזן התיכונה ומתח מופחת בעור התוף. סקר שביעות רצון שנערך עם לקוחות אירדוק הראה כי 94% מהמשתמשים חוו הקלה בכאב בעת השימוש, ו-89% מהם ישתמשו שוב באירדוק לטיפול בדלקת אוזניים וכאבי אוזניים.        </p>                 
+מטופלים ומטופלות שהשתמשו באירדוק דיווחו על הקלה משמעותית בכאב, הפחתה בנזילת נוזלים מהאוזן התיכונה ומתח מופחת בעור התוף. סקר שביעות רצון שנערך עם לקוחות אירדוק הראה כי 94% מהמשתמשים והמשתמשות חוו הקלה בכאב בעת השימוש, ו-89% מהם ישתמשו שוב באירדוק לטיפול בדלקת אוזניים וכאבי אוזניים.        </p>                 
     </li>
     
     <li >
