--- a/doctorPage.html
+++ b/doctorPage.html
@@ -310,7 +310,7 @@
             אירדוק עבר את כל המבחנים
             המחמירים של משרד הבריאות
             הישראלי והאמריקאי והוכח
-            כיעיל לכאבי אוזניים
+            כיעיל לכאבי אוזניים.
         </p>                 
     </li>
     
