--- a/Homepage.html
+++ b/Homepage.html
@@ -350,7 +350,7 @@
                  1. ניתן להגביר את עוצמת הרטט בהדרגה עד למציאת הרמה הרצויה באמצעות כפתור ההדלקה.
                 
                 <br>
-                2. יש לבדוק שקצה הסיליקון מחובר כראוי ותקין.
+                2. יש לבדוק שקצה הגומי מחובר כראוי ותקין.
                 <br>
                 3. יש לוודא שהמכשיר אינו חסום או מוחזק בצורה לא נכונה.
 
