--- a/Homepage.html
+++ b/Homepage.html
@@ -260,7 +260,7 @@
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>ניתן להשתמש באירדוק עד 3 פעמים ביום</strong>
+               ניתן להשתמש באירדוק עד 3 פעמים ביום
                 כאשר כל טיפול נמשך 3-5 דקות לכל אוזן. חשוב לא לחרוג מהמלצות שימוש אלו.
             </div>
         </div>
@@ -274,7 +274,7 @@
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>כן, אירדוק מתאים לילדים/ות אך יש להשתמש בו בהשגחת מבוגר/ת. </strong>
+                כן, אירדוק מתאים לילדים/ות אך יש להשתמש בו בהשגחת מבוגר/ת. 
                 יש להקפיד תמיד על הנחיות הבטיחות ולהתייעץ עם רופא/ה במקרה של ספק.
             </div>
         </div>
@@ -288,7 +288,7 @@
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>אירדוק נועד להקל על אי נוחות הקשור למצבים כמו דלקת אוזן תיכונה, גודש באוזניים וליקוי בתפקוד חצוצרה האוסטאכיוס. </strong>
+               אירדוק נועד להקל על אי נוחות הקשור למצבים כמו דלקת אוזן תיכונה, גודש באוזניים וליקוי בתפקוד חצוצרה האוסטאכיוס. 
                 ייתכן שהוא לא יהיה יעיל לכל בעיות האוזניים, ומומלץ להתייעץ עם גורם מקצועי רפואי לצורך אבחון וטיפול מתאימים.
             </div>
         </div>
@@ -302,7 +302,7 @@
         </h2>
         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>שיתוף האירדוק אפשרי במידת הצורך</strong>, אך חובה לנקות ולחטא היטב את המכשיר לפני כדי למנוע הדבקה הדדית.
+                שיתוף האירדוק אפשרי במידת הצורך, אך חובה לנקות ולחטא היטב את המכשיר לפני כדי למנוע הדבקה הדדית.
             </div>
         </div>
     </div>
@@ -315,7 +315,8 @@
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>אם חווית אי נוחות, יש להפסיק את השימוש במכשיר באופן מיידי ולכנוון את עוצמת הרטט.</strong> יש להתייעץ עם גורם מקצועי רפואי אם אי הנוחות נמשכת.
+               אם חווית אי נוחות, יש להפסיק את השימוש במכשיר באופן מיידי ולכנוון את עוצמת הרטט.
+            יש להתייעץ עם גורם מקצועי רפואי אם אי הנוחות נמשכת.
             </div>
         </div>
     </div>
