--- a/travlerPage.html
+++ b/travlerPage.html
@@ -86,7 +86,7 @@
             </li>
             <li>
                 <h2 style="color: orange;" >  לחץ באוזניים בטיסות - למה זה קורה לנו?</h2>
-                <p>
+                <p class="main-text">
                     תחושת לחץ באוזניים במהלך טיסה נוצרת בעיקר בהמראה ובנחיתה, כתוצאה מהפרש הלחצים בין האוויר הסביבתי לאוויר הכלוא בחלל האוזן התיכונה.
                     לא להיות בלחץ... יש לנו פתרון שתעופו עליו!
                 </p>
