--- a/travlerPage.html
+++ b/travlerPage.html
@@ -85,7 +85,7 @@
 
             </li>
             <li>
-                <h2 style="color: orange;" >  לחץ באוזניים בטיסות - למה זה קורה לנו?</h2>
+                <h2 style="color: orange;" > לחץ באוזניים בטיסות - למה זה קורה?</h2>
                 <p class="fly-info-p">
                     תחושת לחץ באוזניים במהלך טיסה נוצרת בעיקר בהמראה ובנחיתה, כתוצאה מהפרש הלחצים בין האוויר הסביבתי לאוויר הכלוא בחלל האוזן התיכונה.
                     לא להיות בלחץ... יש לנו פתרון שתעופו עליו!
