--- a/kidsPage.html
+++ b/kidsPage.html
@@ -81,6 +81,28 @@
 
 
      
+    <div class="kids-opening-section">
+
+        <ul>
+
+            <li>
+                <img src="images/childrenIconinfo.png" alt=" מידע לילדים"  class="kids-forparents-section-icon">
+
+            </li>
+            <li>
+                <h2 style="color: #751DD5;">בעיות אוזניים נפוצות אצל ילדים וילדות  </h2>
+                <p class="main-text-kids"> 
+                    בגילים קטנים בעיות האוזניים העיקריות הם דלקת האוזן התיכונה ונוזלים באוזניים, שכדי לטפל בהם נדרש לקחת תרופות או לעבור ניתוח כפתורים. התסמינים יכולים להיות: כאבים באוזניים, ירידה בשמיעה, קשיי שיווי משקל, חום ונזלת. האירדוק יכול להוות תחליף לניתוח כפתורים או להקל על הכאבים לקראת הניתוח, משום שהוא עוזר לנקז את הנוזלים באוזניים.
+</p>
+            </li>
+
+
+        </ul>
+
+
+    </div>
+
+     
 
 
 
