--- a/doctorPage.html
+++ b/doctorPage.html
@@ -280,11 +280,11 @@
     </li>
     
     <li >
-        <img src="images/Research-1.png" alt="1תוצאות מחקר"  class="research-image">
+        <img src="images/Research-1.jpg" alt="1תוצאות מחקר"  class="research-image">
 
     </li>
     <li >
-        <img src="images/research-2.png" alt="2תוצאות מחקר"  class="research-image">
+        <img src="images/research-2.jpg" alt="2תוצאות מחקר"  class="research-image">
 
     </li>
 
