--- a/doctorPage.html
+++ b/doctorPage.html
@@ -315,7 +315,7 @@
         </p>                 
     </li>
     <li >
-        <img src="images/research-3.png" alt="3תוצאות מחקר" class="research-image">
+        <img src="images/research-3.jpg" alt="3תוצאות מחקר" class="research-image">
 
     </li>
 </ul>  
