--- a/kidsPage.html
+++ b/kidsPage.html
@@ -92,8 +92,7 @@
             <li>
                 <h2 style="color: #751DD5;">בעיות אוזניים נפוצות אצל ילדים וילדות  </h2>
                 <p class="main-text-kids"> 
-                    בגילים קטנים בעיות האוזניים העיקריות הם דלקת האוזן התיכונה ונוזלים באוזניים, שכדי לטפל בהם נדרש לקחת תרופות או לעבור ניתוח כפתורים. התסמינים יכולים להיות: כאבים באוזניים, ירידה בשמיעה, קשיי שיווי משקל, חום ונזלת. האירדוק יכול להוות תחליף לניתוח כפתורים או להקל על הכאבים לקראת הניתוח, משום שהוא עוזר לנקז את הנוזלים באוזניים.
-</p>
+בגילים קטנים בעיות האוזניים העיקריות הם דלקת האוזן התיכונה ונוזלים באוזניים, שכדי לטפל בהם נדרש לקחת תרופות או לעבור ניתוח כפתורים. התסמינים יכולים להיות: כאבים באוזניים, ירידה בשמיעה, קשיי שיווי משקל, חום ונזלת.</p>
             </li>
 
 
