--- a/kidsPage.html
+++ b/kidsPage.html
@@ -185,7 +185,7 @@
 
 
 
-
+   <h2 style="color: blueviolet; text-align: center;">?למה דווקא אירדוק</h2>
   <div class="square">
     <div class="flex-container-info-parents">
       <img src="images/researchIcon.png" alt="מחקרים אייקון "  style="width: 25%;padding: 6%;" class="parent-info-buttons-research">
