--- a/kidsPage.html
+++ b/kidsPage.html
@@ -143,7 +143,7 @@
 <br>
      
 
-     <h2 style="color: blueviolet; text-align: center;">?למה דווקא אירדוק</h2>
+     <h2 style="color: blueviolet; text-align: center;">למה דווקא אירדוק?</h2>
 <div class="container-info-kids">
   <div class="square">
 
