--- a/doctorPage.html
+++ b/doctorPage.html
@@ -319,6 +319,10 @@
     </li>
 </ul>  
 
+    <div class="fda-icon">
+ <img src="images/fda-icon.png" alt="אישור של משרד הבריאות" class="fda-icon">
+</div>
+
 <div class="centered">
     <img src="images/eardoc-web-icon.png" alt="אייקון אירדוק" class="web-icon">
 
