--- a/kidsPage.html
+++ b/kidsPage.html
@@ -288,7 +288,9 @@
         <iframe src="./kids-mobile-code/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
 
     </div>
-
+<div class="fda-icon">
+ <img src="images/fda-icon.png" alt="אישור של משרד הבריאות" class="fda-icon">
+</div>
 
 
 <div class="centered">
