--- a/swimmers.html
+++ b/swimmers.html
@@ -172,7 +172,9 @@
   
 
 <br>
-
+<div class="fda-icon">
+ <img src="images/fda-icon.png" alt="אישור של משרד הבריאות" class="fda-icon">
+</div>
 <div class="centered">
     <img src="images/eardoc-web-icon.png" alt="אייקון אירדוק" class="web-icon">
 
