--- a/kidsPage.html
+++ b/kidsPage.html
@@ -92,7 +92,7 @@
             <li>
                 <h2 style="color: #751DD5;">בעיות אוזניים נפוצות אצל ילדים וילדות  </h2>
                 <p class="main-text-kids"> 
-בגילים קטנים בעיות האוזניים העיקריות הם דלקת האוזן התיכונה ונוזלים באוזניים, שכדי לטפל בהם נדרש לקחת תרופות או לעבור ניתוח כפתורים. התסמינים יכולים להיות: כאבים באוזניים, ירידה בשמיעה, קשיי שיווי משקל, חום ונזלת.</p>
+דלקות אוזניים אצל תינוקות ופעוטות הן בעיה נפוצה, שלרוב מטופלת בתרופות או בניתוח כפתורים. האירדוק מציע אלטרנטיבה בטוחה ויעילה, המתאימה לשימוש מגיל שנה, ומסייע בהקלת תסמינים ללא צורך בטיפולים פולשניים.                </p>
             </li>
 
 
