--- a/adult.html
+++ b/adult.html
@@ -52,7 +52,7 @@
             <li><a href="./travlerPage.html">טס/ה</a></li>
 
             <li><a href="./swimmers.html">שוחה</a></li>
-            <li style="border-bottom: 3px solid #0389c2;"><a href="./adult.html">בגיל השלישי</a></li>
+            <li style="border-bottom: 3px solid #37C7E9;"><a href="./adult.html">בגיל השלישי</a></li>
         </ul>
     </nav>
    
