--- a/doctorPage.html
+++ b/doctorPage.html
@@ -56,7 +56,7 @@
     
         <ul id="main-nav" class="flex-container-nav hide-mobile">
             <li><a href="./Homepage.html"><img src="images/Eardoclogo.png" alt="EardocLogo" style="width: 74%;"></a></li>
-                       <li style="border-bottom: 3px solid #0389c2;"><a href="./doctorPage.html">רופא/ה</a></li>
+                       <li style="border-bottom: 3px solid #37C7E9;"><a href="./doctorPage.html">רופא/ה</a></li>
             <li><a href="./kidsPage.html">הורים וילדים/ות</a></li>
             <li><a href="./travlerPage.html">טס/ה</a></li>
 
