--- a/swimmers.html
+++ b/swimmers.html
@@ -51,7 +51,7 @@
             <li><a href="./kidsPage.html">הורים וילדים/ות</a></li>
             <li><a href="./travlerPage.html">טס/ה</a></li>
 
-            <li style="border-bottom: 3px solid #0389c2;"><a href="./swimmers.html">שוחה</a></li>
+            <li style="border-bottom: 3px solid #37C7E9;"><a href="./swimmers.html">שוחה</a></li>
             <li><a href="./adult.html">בגיל השלישי</a></li>
         </ul>
     </nav>
