--- a/travlerPage.html
+++ b/travlerPage.html
@@ -50,7 +50,7 @@
             <li><a href="./Homepage.html"><img src="images/Eardoclogo.png" alt="EardocLogo" style="width: 74%;"></a></li>
                        <li><a href="./doctorPage.html">רופא/ה</a></li>
             <li><a href="./kidsPage.html">הורים וילדים/ות</a></li>
-            <li style="border-bottom: 3px solid #0389c2;"><a href="./travlerPage.html">טס/ה</a></li>
+            <li style="border-bottom: 3px solid #37C7E9;"><a href="./travlerPage.html">טס/ה</a></li>
 
             <li><a href="./swimmers.html">שוחה</a></li>
             <li><a href="./adult.html">בגיל השלישי</a></li>
