--- a/doctorPage.html
+++ b/doctorPage.html
@@ -132,7 +132,7 @@
 
     <li class="doc-med"> 
         <div class="inline-container">
-            <img src="images/buttonearIcon.png" alt="ניתוח כפתורים"  class="medCat-image">
+            <img src="images/restrictions-perforation.png" alt="ניתוח כפתורים"  class="medCat-image">
     
             <button class="accordion"> ניתוח כפתורים</button>
         </div>
