--- a/kidsPage.html
+++ b/kidsPage.html
@@ -148,7 +148,7 @@
   <div class="square">
 
     <div class="flex-container-info-parents">
-      <img src="images/buttonearIcon.png" alt="ניתוח כפתורים"  class="parent-info-buttons">
+      <img src="images/restrictions-perforation.png" alt="ניתוח כפתורים"  class="parent-info-buttons">
       <div class="title">ניתוח כפתורים</div>
       
     </div>
