--- a/doctorPage.html
+++ b/doctorPage.html
@@ -183,12 +183,24 @@
   
   </div>
 
-  <div class="viewer-container-introdoc-mobile">
+<!--   <div class="viewer-container-introdoc-mobile">
     <iframe src="./מבנה האוזן ואיך זה עובד-מובייל/story.html" width="90%" height="800"  frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
   
-  </div>
+  </div> -->
   
 
+  <img src="images/earanatomy-popup-icon.png" alt="מבנה האוזן תמונה "  style="width: 94%;
+  margin-right: 4%;">
+  <button class="open-popup-btn-earanatomy"> התחלה</button>
+
+    <div class="popup-container-earanatomy">
+        <div class="popup-earanatomy">
+            <button class="close-popup-btn-earanatomy">X</button>
+            <div class="viewer-container-introdoc-mobile">
+                <iframe src="./מבנה האוזן ואיך זה עובד -מובייל/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+            </div>
+        </div>
+    </div>
 
 
 
