--- a/doctorPage.html
+++ b/doctorPage.html
@@ -189,9 +189,14 @@
   </div> -->
   
 
+
+
+    <div class="showpopup">
   <img src="images/earanatomy-popup-icon.png" alt="מבנה האוזן תמונה "  style="width: 94%;
   margin-right: 4%;">
   <button class="open-popup-btn-earanatomy"> התחלה</button>
+
+</div>
 
     <div class="popup-container-earanatomy">
         <div class="popup-earanatomy">
