--- a/doctorPage.html
+++ b/doctorPage.html
@@ -238,10 +238,10 @@
 
 </div>
     
-    <div class="viewer-container-introdoc-mobile">
+<!--     <div class="viewer-container-introdoc-mobile">
         <iframe src="./KnowEardoc360 - mobile/story.html" width="90%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
     
-</div> -->
+</div>  -->
 
 
 <div class="showpopup-360">
