--- a/doctorPage.html
+++ b/doctorPage.html
@@ -253,7 +253,7 @@
   <div class="popup-360">
     <button class="close-popup-btn-360">X</button>
     <div class="viewer-container-introdoc-mobile">
-      <iframe src="./__KnowEardoc360 - mobile/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+      <iframe src="./KnowEardoc360 - mobile/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
     </div>
   </div>
 </div>
