--- a/doctorPage.html
+++ b/doctorPage.html
@@ -289,12 +289,25 @@
 </div>
 
 
-<div class="viewer-container-introdoc-mobile">
+<!-- <div class="viewer-container-introdoc-mobile">
 
   <iframe src="./doc-mobile/story.html" width="90%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
 </div>
+ -->
 
+<div class="showpopup-stepbystep">
+  <img src="images/meeteardoc-popup-icon.png" alt="תכירו את האירדוק אייקון " style="width: 94%; margin-right: 4%;">
+  <button class="open-popup-btn-stepbystep"> התחלה</button>
+</div>
 
+<div class="popup-container-stepbystep">
+  <div class="popup-stepbystep">
+    <button class="close-popup-btn-stepbystep">X</button>
+    <div class="viewer-container-introdoc-mobile">
+      <iframe src="./doc-mobile/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+    </div>
+  </div>
+</div>
 
 
      
