--- a/doctorPage.html
+++ b/doctorPage.html
@@ -295,7 +295,7 @@
 </div>
  -->
 
-<div class="showpopup-360">
+<div class="showpopup-stepbystep">
   <img src="images/meeteardoc-popup-icon.png" alt="תכירו את האירדוק אייקון " style="width: 94%; margin-right: 4%;">
   <button class="open-popup-btn-stepbystep"> התחלה</button>
 </div>
