--- a/kidsPage.html
+++ b/kidsPage.html
@@ -138,7 +138,7 @@
       </div> -->
 
            <div class="showpopup">
-        <img src="images/360eardoc-popupicon.png" alt="אירדוק 360" style="width: 94%; margin-right: 4%;">
+        <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%;">
         <button class="open-popup-btn-earanatomy"> התחלה</button>
       </div>
       
