--- a/kidsPage.html
+++ b/kidsPage.html
@@ -138,11 +138,11 @@
       </div> -->
 
            <div class="showpopup">
-        <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%;">
+        <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%; ">
         <button class="open-popup-btn-earanatomy"> התחלה</button>
       </div>
       
-      <div class="popup-container-earanatomy">
+      <div class="popup-container-earanatomy" style="z-index: 2;">
         <div class="popup-earanatomy">
           <button class="close-popup-btn-earanatomy">X</button>
           <div class="viewer-container-introdoc-mobile">
