--- a/kidsPage.html
+++ b/kidsPage.html
@@ -318,8 +318,10 @@
 
     </div>
  -->
+
+     
     <div class="showpopup-stepbystep">
-        <img src="images/meetdoc-popup-icon.png" alt="תכירו את האירדוק אייקון " style="width: 94%; margin-right: 4%;">
+        <img src="images/meetdoc-popup-icon.png" alt=" איך להשתמש באירדוק   " style="width: 94%; margin-right: 4%;">
         <button class="open-popup-btn-stepbystep"> התחלה</button>
       </div>
       
