--- a/kidsPage.html
+++ b/kidsPage.html
@@ -244,7 +244,7 @@
 
 <div class="showpopup-360">
     <img src="images/360eardoc-popupicon.png" alt="אירדוק 360" style="width: 94%; margin-right: 4%;">
-    <button class="open-popup-btn-360"> התחלה</button>
+    <button class="open-popup-btn-360-kids"> התחלה</button>
   </div>
   
   <div class="popup-container-360">
