--- a/doctorPage.html
+++ b/doctorPage.html
@@ -111,7 +111,7 @@
         <div class="inline-container">
     <img src="images/antibioticIcon.png" alt="אניטיביוטיקה"  class="medCat-image-antibiotics">
     
-        <button class="accordion"> אנטיביוטיקה</button>
+          <button class="accordion"> אנטיביוטיקה<span class="dropdown-arrow"></span></button>
 
         </div>
     
