--- a/doctorPage.html
+++ b/doctorPage.html
@@ -134,7 +134,7 @@
         <div class="inline-container">
             <img src="images/restrictions-perforation.png" alt="ניתוח כפתורים"  class="medCat-image">
     
-            <button class="accordion"> ניתוח כפתורים<span class="dropdown-arrow"></span></button>
+            <button class="accordion"> ניתוח כפתורים<span class="dropdown-arrow2"></span></button>
         </div>
 
         <div class="panel">
