--- a/travlerPage.html
+++ b/travlerPage.html
@@ -238,7 +238,7 @@
 
 <div class="showpopup-360">
   <img src="images/360eardoc-popupicon.png" alt="אירדוק 360" style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-360-kids"> התחלה</button>
+  <button class="open-popup-btn-360-fly"> התחלה</button>
 </div>
 
 <div class="popup-container-360">
@@ -287,7 +287,7 @@
   
 <div class="showpopup-stepbystep">
   <img src="images/meeteardoc-popup-icon.png" alt="תכירו את האירדוק אייקון " style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-stepbystep-kids"> התחלה</button>
+  <button class="open-popup-btn-stepbystep-fly"> התחלה</button>
 </div>
 
 <div class="popup-container-stepbystep">
