--- a/travlerPage.html
+++ b/travlerPage.html
@@ -125,7 +125,7 @@
 
            <div class="showpopup">
         <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%; ">
-        <button class="open-popup-btn-earanatomy-sw"> התחלה</button>
+        <button class="open-popup-btn-earanatomy-fly"> התחלה</button>
       </div>
       
       <div class="popup-container-earanatomy" style="z-index: 2;">
@@ -238,7 +238,7 @@
 
 <div class="showpopup-360">
   <img src="images/360eardoc-popupicon.png" alt="אירדוק 360" style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-360-sw"> התחלה</button>
+  <button class="open-popup-btn-360-fly"> התחלה</button>
 </div>
 
 <div class="popup-container-360">
