--- a/swimmers.html
+++ b/swimmers.html
@@ -129,7 +129,7 @@
 
         <div class="showpopup">
         <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%; ">
-        <button class="open-popup-btn-earanatomy-fly"> התחלה</button>
+        <button class="open-popup-btn-earanatomy-sw"> התחלה</button>
       </div>
       
       <div class="popup-container-earanatomy" style="z-index: 2;">
@@ -234,7 +234,7 @@
 
      <div class="showpopup-360">
   <img src="images/360eardoc-popupicon.png" alt="אירדוק 360" style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-360-fly"> התחלה</button>
+  <button class="open-popup-btn-360-sw"> התחלה</button>
 </div>
 
 <div class="popup-container-360">
@@ -263,12 +263,28 @@
 
 </div>
   
-  <div class="viewer-container-introdoc-mobile">
+<!--   <div class="viewer-container-introdoc-mobile">
       <iframe src="./mobile-swim-code/story.html" width="90%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
   
 </div>
-  
+   -->
 
+<div class="showpopup-stepbystep">
+  <img src="images/meeteardoc-popup-icon.png" alt="תכירו את האירדוק אייקון " style="width: 94%; margin-right: 4%;">
+  <button class="open-popup-btn-stepbystep-sw"> התחלה</button>
+</div>
+
+<div class="popup-container-stepbystep">
+  <div class="popup-stepbystep">
+    <button class="close-popup-btn-stepbystep">X</button>
+    <div class="viewer-container-introdoc-mobile">
+      <iframe src="./flyMobile/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+    </div>
+  </div>
+</div>
+
+
+     
 <br>
 <div class="fda-icon">
  <img src="images/fda-icon.png" alt="אישור של משרד הבריאות" class="fda-icon">
