--- a/swimmers.html
+++ b/swimmers.html
@@ -129,7 +129,7 @@
 
         <div class="showpopup">
         <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%; ">
-        <button class="open-popup-btn-earanatomy-sw"> התחלה</button>
+        <button class="open-popup-btn-earanatomy"> התחלה</button>
       </div>
       
       <div class="popup-container-earanatomy" style="z-index: 2;">
@@ -234,7 +234,7 @@
 
      <div class="showpopup-360">
   <img src="images/360eardoc-popupicon.png" alt="אירדוק 360" style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-360-sw"> התחלה</button>
+  <button class="open-popup-btn-360"> התחלה</button>
 </div>
 
 <div class="popup-container-360">
@@ -271,7 +271,7 @@
 
 <div class="showpopup-stepbystep">
   <img src="images/meeteardoc-popup-icon.png" alt="תכירו את האירדוק אייקון " style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-stepbystep-sw"> התחלה</button>
+  <button class="open-popup-btn-stepbystep"> התחלה</button>
 </div>
 
 <div class="popup-container-stepbystep">
