--- a/swimmers.html
+++ b/swimmers.html
@@ -278,7 +278,7 @@
   <div class="popup-stepbystep">
     <button class="close-popup-btn-stepbystep">X</button>
     <div class="viewer-container-introdoc-mobile">
-      <iframe src="./flyMobile/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+      <iframe src="./mobile-swim-code/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
     </div>
   </div>
 </div>
