--- a/adult.html
+++ b/adult.html
@@ -304,7 +304,7 @@
   <div class="popup-stepbystep">
     <button class="close-popup-btn-stepbystep">X</button>
     <div class="viewer-container-introdoc-mobile">
-      <iframe src="./doc-mobile/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+      <iframe src="./mobile-adult-code/story.html" width="100%" height="800" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
     </div>
   </div>
 </div>
