--- a/swimmers.html
+++ b/swimmers.html
@@ -124,7 +124,7 @@
 
         <div class="showpopup">
         <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%; ">
-        <button class="open-popup-btn-earanatomy"> התחלה</button>
+        <button class="open-popup-btn-earanatomy" style="background: linear-gradient(to bottom, #f6ebff, #8a2be2);"> התחלה</button>
       </div>
       
       <div class="popup-container-earanatomy" style="z-index: 2;">
@@ -229,7 +229,7 @@
 
      <div class="showpopup-360">
   <img src="images/360eardoc-popupicon.png" alt="אירדוק 360" style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-360"> התחלה</button>
+  <button class="open-popup-btn-360" style="background: linear-gradient(to bottom, #f6ebff, #8a2be2);"> התחלה</button>
 </div>
 
 <div class="popup-container-360">
@@ -266,7 +266,7 @@
 
 <div class="showpopup-stepbystep">
   <img src="images/meeteardoc-popup-icon.png" alt="תכירו את האירדוק אייקון " style="width: 94%; margin-right: 4%;">
-  <button class="open-popup-btn-stepbystep"> התחלה</button>
+  <button class="open-popup-btn-stepbystep" style="background: linear-gradient(to bottom, #f6ebff, #8a2be2);"> התחלה</button>
 </div>
 
 <div class="popup-container-stepbystep">
