--- a/doctorPage.html
+++ b/doctorPage.html
@@ -129,7 +129,7 @@
         <div class="inline-container">
             <img src="images/restrictions-perforation.png" alt="ניתוח כפתורים"  class="medCat-image">
     
-            <button class="accordion"> ניתוח כפתורים<span class="dropdown-arrow2" style="
+            <button class="accordion"> ניתוח כפתורים<span class="dropdown-arrow" style="
     right: 64%;
 "></span></button>
         </div>
