--- a/kidsPage.html
+++ b/kidsPage.html
@@ -196,7 +196,7 @@
   
   <div class="square">
     <div class="flex-container-info-parents">
-      <img src="images/researchIcon.png" alt="מחקרים אייקון "  style="width: 25%;padding: 0%;" class="parent-info-buttons-research">
+      <img src="images/researchIcon.png" alt="מחקרים אייקון "  style="padding: 0%;" class="parent-info-buttons-research">
             <div class="title">יעילות מוכחת  <span class="dropdown-arrow-kids" style="right: 180%;"></span></div>
       
     </div>
