--- a/travlerPage.html
+++ b/travlerPage.html
@@ -185,7 +185,7 @@
 
   <div class="square-travel">
     <div class="flex-container-info-travel">
-      <img src="images/researchIcon.png" alt="מחקרים אייקון "  style="width: 25%;padding: 2%;" class="travel-info-buttons-research">
+      <img src="images/researchIcon.png" alt="מחקרים אייקון "  style="padding: 2%;" class="travel-info-buttons-research">
       <div class="title">יעילות מוכחת <span class="dropdown-arrow-kids" style="right: 172%;"></span></div>
       
     </div>
