--- a/swimmers.html
+++ b/swimmers.html
@@ -180,7 +180,7 @@
   
     <div class="square-sw">
       <div class="flex-container-info-sw">
-        <img src="images/researchIcon.png" alt="מחקרים אייקון "  style="width: 25%;padding: 2%;" class="sw-info-buttons-research">
+        <img src="images/researchIcon.png" alt="מחקרים אייקון " class="sw-info-buttons-research">
         <div class="title">יעילות מוכחת<span class="dropdown-arrow-kids" style="right: 170%;"></span></div>
         
       </div>
