--- a/adult.html
+++ b/adult.html
@@ -219,7 +219,7 @@
   
     <div class="square-ad">
       <div class="flex-container-info-ad">
-        <img src="images/researchIcon.png" alt="מחקרים אייקון "  style="width: 25%;padding: 0%;" class="ad-info-buttons-research">
+        <img src="images/researchIcon.png" alt="מחקרים אייקון " class="ad-info-buttons-research">
         <div class="title">יעילות מוכחת<span class="dropdown-arrow-kids" style="right: 196%;"></span></div>
         
       </div>
