--- a/kidsPage.html
+++ b/kidsPage.html
@@ -125,7 +125,8 @@
 
 
     <div class="viewer-container-introdocs">
-        <iframe src="./web-earanatomy/story.html" width="100%" height="700" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
+        <iframe src="./web-earanatomy/story.html" width="100%" height="700" frameborder="0" allowfullscreen class="iframe-storyline" style="
+    height: 100%;"></iframe>
       </div>
       
 <!--       <div class="viewer-container-introdoc-mobile">
