--- a/kidsPage.html
+++ b/kidsPage.html
@@ -287,7 +287,7 @@
 
 <div id="popup" class="popup">
     <div class="popup-content">
-        <button type="button" class="btn-close" aria-label="Close" onclick="closePopup()" style="margin-left: 100%;">X</button>
+        <button type="button" class="btn-close" aria-label="Close" onclick="closePopup()" style="margin-left: 100%; border: none; background-color: transparent;">X</button>
         <div class="flex-container-popup">
             <h2 id="popup-title"></h2>
             <img id="popup-flag" src="" alt="Country flag" class="flag">
