--- a/Homepage.html
+++ b/Homepage.html
@@ -259,9 +259,8 @@
             </button>
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-               ניתן להשתמש באירדוק עד 3 פעמים ביום
-                כאשר כל טיפול נמשך 3-5 דקות לכל אוזן. חשוב לא לחרוג מהמלצות שימוש אלו.
+            <div class="accordion-body"> 
+                ניתן להשתמש באירדוק עד 3 פעמים ביום כאשר כל טיפול נמשך 3-5 דקות לכל אוזן.
             </div>
         </div>
     </div>
