--- a/Homepage.html
+++ b/Homepage.html
@@ -314,8 +314,7 @@
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-               אם חווית אי נוחות, יש להפסיק את השימוש במכשיר באופן מיידי ולכנוון את עוצמת הרטט.
-            יש להתייעץ עם גורם מקצועי רפואי אם אי הנוחות נמשכת.
+אם חווית אי נוחות, יש לכוון את עוצמת הרטט לנמוכה יותר. במידה והאי נוחות ממשיכה יש להפסיק ולהתייעץ עם גורם מקצועי.
             </div>
         </div>
     </div>
