--- a/kidsPage.html
+++ b/kidsPage.html
@@ -125,14 +125,10 @@
 
 
     <div class="viewer-container-introdocs">
-        <iframe src="./web-earanatomy/story.html" width="100%" height="700" frameborder="0" allowfullscreen class="iframe-storyline" style="
-    height: 100%;"></iframe>
+        <iframe src="./web-earanatomy/story.html" width="100%" height="700" frameborder="0" allowfullscreen class="iframe-storyline"
+"></iframe>
       </div>
       
-<!--       <div class="viewer-container-introdoc-mobile">
-        <iframe src="./מבנה האוזן ואיך זה עובד-מובייל/story.html" width="90%" height="800"  frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
-      
-      </div> -->
 
            <div class="showpopup">
         <img src="images/earanatomy-popup-icon.png" alt="אנטומיה של האוזן " style="width: 94%; margin-right: 4%; ">
