--- a/Homepage.html
+++ b/Homepage.html
@@ -48,7 +48,7 @@
         </div>
     
         <ul id="main-nav" class="flex-container-nav hide-mobile">
-            <li><a href="./Homepage.html"><img src="images/Eardoclogo.png" alt="EardocLogo" style="width: 74%;"></a></li>
+            <li><a href="./Homepage.html"><img src="images/Eardoclogo.png" alt="EardocLogo"  class="web-logo"></a></li>
                        <li><a href="./doctorPage.html">רופא/ה</a></li>
             <li><a href="./kidsPage.html">הורים וילדים/ות</a></li>
             <li><a href="./travlerPage.html">טס/ה</a></li>
