--- a/Homepage.html
+++ b/Homepage.html
@@ -23,7 +23,7 @@
    
    
   <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/fivcon-eardoc2.png">
+    <link rel="icon" type="image/png" href="images/fivcon-eardoc2.png" style="width:40;">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
