--- a/kidsPage.html
+++ b/kidsPage.html
@@ -66,7 +66,7 @@
 אנחנו הורה וילד/ה
             </h1>
             <p class="main-text">
-הגעת לאתר הדרכה של האירדוק, מכשיר שעוזר להתגבר על כאבים באוזניים. יכול להיות שהכאבים מקשים על ילדך בלימודים או עם חברים, ואנחנו כאן כדי לעזור.           </p>                 
+הגעת לאתר הדרכה של האירדוק, מכשיר שעוזר להתגבר על כאבים באוזניים. יכול להיות שהכאבים מקשים על ילדך בלימודים או עם חברים וחברות, ואנחנו כאן כדי לעזור.           </p>                 
         </li>
         <li >
             <img src="images/kidsCat.png" alt="ילד.ה" class="chosenCat-image-kids">
@@ -267,13 +267,13 @@
               <p class="main-text">
                   <strong>אם הרטט מפחיד את הילד/ה</strong>
                   <br>
-                  הפעילו את המכשיר ואפשרו לילד/ה לגעת בו על מנת להרגיש את הרטט העדין, הסבירו שהאירדוק אינו מפחיד ולא מזיק.
+אפשר לתת לילדך לגעת בהמכשיר לאחר הפעלתו על מנת להרגיש את הרטט העדין. ניתן להסביר שהאירדוק אינו מפחיד ואינו מזיק.
               </p>
               <p class="main-text">
                   <strong>אם הילד/ה חושש/ת מהשימוש במכשיר</strong>
                   <br>
-                  תוכל להראות לילדכם/ן סרטונים של ילדים אחרים שהשתמשו במכשיר
-                            <span onclick="showPopup('Israel')" style="cursor: pointer; text-decoration: underline; color: #761dd5;     font-family: 'Assistant-bold';">לחצו כאן לצפייה בהמלצה</span>
+                 אפשר להראות את סרטון ההמלצה הבא, בו נראה ילד שמשתמש באירדוק.
+                            <span onclick="showPopup('Israel')" style="cursor: pointer; text-decoration: underline; color: #761dd5;     font-family: 'Assistant-bold';">  לצפייה בהמלצה</span>
               </p>
           </div>
       </li>
