--- a/kidsPage.html
+++ b/kidsPage.html
@@ -117,8 +117,7 @@
                  
         <p style="text-align: center;">
 לחיצה על כל אייקון תחשוף מידע על החלק באוזן.
-אבל איך הוא עובד? לחצו על הכפתור כדי לגלות...
- </p>
+  אבל איך הוא עובד? לחיצה על הכפתור תחשוף זאת... </p>
             
      </li> 
  </ul>
