--- a/swimmers.html
+++ b/swimmers.html
@@ -107,8 +107,8 @@
        כשהגלים מתחזקים, האירדוק מתגלה...
        <br>
 לחיצה על כל אייקון תחשוף מידע על החלק באוזן.
-אבל איך הוא עובד? לחצו על הכפתור כדי לגלות...
- </p>
+  אבל איך הוא עובד? לחיצה על הכפתור תחשוף זאת...
+   </p>
   <div class="viewer-container-introdocs">
     <iframe src="./web-earanatomy/story.html" width="100%" height="700" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
   </div>
