--- a/travlerPage.html
+++ b/travlerPage.html
@@ -106,8 +106,8 @@
   </h2>
    <p style="text-align: center;">
 לחיצה על כל אייקון תחשוף מידע על החלק באוזן.
-אבל איך הוא עובד? לחצו על הכפתור כדי לגלות...
- </p>
+  אבל איך הוא עובד? לחיצה על הכפתור תחשוף זאת...
+   </p>
   <div class="viewer-container-introdocs">
    <iframe src="./web-earanatomy/story.html" width="100%" height="700" frameborder="0" allowfullscreen class="iframe-storyline"></iframe>
   </div>
