--- a/travlerPage.html
+++ b/travlerPage.html
@@ -262,9 +262,10 @@
 <h2 style="text-align: center; color: orange; ">איך לתפעל את האירדוק צעד אחר צעד</h2>
 
         <p style="text-align: center;">
-אחרי שהבנו איך האירדוק משפיע על האוזן בזמן הטיסה, הגיע הזמן ללמוד איך להשתמש בו נכון!
 
-אל דאגה, זה לא מסובך כמו להטיס מטוס - תוכלו ללמוד הכל ב 4 צעדים פשוטים.
+            איך להשתמש נכון באירדוק?
+            
+אל דאגה, זה לא מסובך כמו להטיס מטוס - ניתן ללמוד הכל ב 4 צעדים פשוטים.
         </p> 
 
 
