--- a/Homepage.html
+++ b/Homepage.html
@@ -75,7 +75,7 @@
 
    <p class="main-text"> זהו אתר הלמידה של המכשיר אירדוק- כאן ניתן ללמוד
 מהו האירדוק, איך הוא עובד, ואיך להשתמש בו.
-תוכל/י לצפות במידע המתאים לך, בהתאם לפרופיל הנבחר.
+ניתן לצפות במידע המתאים לך, בהתאם לפרופיל הנבחר.
    </p> 
 
            
