--- a/adult.html
+++ b/adult.html
@@ -226,11 +226,12 @@
   
         <div class="content-adinfo">
           <p> 
-מחקר שנערך על מכשיר האירדוק מצביע על יעילותו בהפחתת תסמיני דלקת אוזן תיכונה, הצטברות נוזלים, טינטון ותחושת מילוי באוזניים.             לקריאה נוספת
+מחקר שנערך על מכשיר האירדוק מצביע על יעילותו בהפחתת תסמיני דלקת אוזן תיכונה, הצטברות נוזלים, טינטון ותחושת מילוי באוזניים.           
             
             <a href="https://drive.google.com/file/d/1RtsGbNaHNL8G0TgyrAQAvZrAEzpxdEgX/view?usp=sharing" style="color: #0389c2; text-decoration: underline;    cursor: pointer">
-                לחצו כאן.       
-             </a>   
+              לקריאה נוספת
+
+            </a>   
             
         </p>
         </div>
