--- a/adult.html
+++ b/adult.html
@@ -108,8 +108,7 @@
       
               <div class="panel">
                 <p>
-                  דלקת זו פוגעת באוזן התיכונה, חלל קטן מאחורי עור התוף. גורמים: חיידקיים, נגיפיים ואלרגיים. התסמינים כוללים כאב אוזניים, התכווצות אוזניים, ירידה בשמיעה, הפרשות מהאוזן, וסחרחורת
-              </p>
+ דלקת זו פוגעת בתעלת האוזן החיצונית, הנקראת גם תעלת השמע. התסמינים כוללים כאב, אדמומיות, נפיחות, הפרשות מהאוזן, וירידה בשמיעה.              </p>
                    
               </div>
           </li>
