--- a/doctorPage.html
+++ b/doctorPage.html
@@ -136,7 +136,7 @@
 
         <div class="panel">
           <p> 
-            ניתוח לטיפול בדלקת אוזן תיכונה כרונית (מעל 3 חודשים) או ירידה בשמיעה. הניתוח מתבצע בהרדמה מלאה על ידי רופא אף אוזן גרון. במהלך הניתוח יוצרים חריץ בעור התוף ומחדירים צינורית קטנה שמנקזת את הנוזלים.                
+            ניתוח לטיפול בדלקת אוזן תיכונה כרונית (מעל 3 חודשים) או ירידה בשמיעה. הניתוח מתבצע בהרדמה מלאה על ידי רופא/ת אף אוזן גרון. במהלך הניתוח יוצרים חריץ בעור התוף ומחדירים צינורית קטנה שמנקזת את הנוזלים.                
               <strong>
 האירדוק מציע טיפול לא פולשני, המסייע בהקלת תסמיני הצטברות נוזלים באוזן, ובאופן פוטנציאלי יכול לדחות או להימנע מצורך בניתוח כפתורים.         </strong>
         
