--- a/doctorPage.html
+++ b/doctorPage.html
@@ -204,8 +204,7 @@
     <h2 style="    color: rgb(55, 199, 233);"> כ-75% מהילדים/ות</h2>
     <p style="    text-align:right;">
 
-        סובלים/ות מדלקות אוזניים לפחות פעם אחת במהלך הילדות. בכל שנה, כחצי מיליון ילדים וילדות מבקרים/ות רופא/ת אף אוזן גרון בשל בעיות באוזניים. דלקות אוזניים יכולות לגרום לכאב משמעותי, אי נוחות ואף לירידה בשמיעה.
-
+סובלים/ות מדלקות אוזניים לפחות פעם אחת במהלך הילדות. בכל שנה, כחצי מיליון ילדים וילדות מבקרים רופא/ת אף אוזן גרון בשל בעיות באוזניים. דלקות אוזניים יכולות לגרום לכאב משמעותי, אי נוחות ואף לירידה בשמיעה.
     </p>
 
 
