--- a/doctorPage.html
+++ b/doctorPage.html
@@ -353,7 +353,7 @@
                 שנערך על האירדוק            
 
                     <a href="https://drive.google.com/file/d/1RtsGbNaHNL8G0TgyrAQAvZrAEzpxdEgX/view?usp=sharing" style="color: #0389c2; text-decoration: underline;">
-                      לחצו כאן
+ניתן ללחוץ כאן.
                     </a>   
         </p>                 
     </li>
