--- a/doctorPage.html
+++ b/doctorPage.html
@@ -375,7 +375,9 @@
             <div class="text">
                 <h2>לאתר הרשמי של האירדוק</h2>
                 <a href="https://www.eardoc.store/" class="button-link">
-                    <button> לחצו כאן</button>
+                    <button>
+לחצ/י כאן
+                    </button>
                 </a>
             </div>
         </div>
