--- a/Homepage.html
+++ b/Homepage.html
@@ -198,7 +198,8 @@
         <div class="flip-card-back">
        
           <p>
-            מטופלים ומטופלות עם אלרגיה לגומי, חומר שנמצא במכשיר האירדוק, צריכים/ות להימנע משימוש בו כדי למנוע תגובות אלרגיות.
+            מטופלים ומטופלות עם אלרגיה לגומי, 
+              חומר שנמצא במכשיר האירדוק, יש להימנע משימוש בו כדי למנוע תגובות אלרגיות.
           </p> 
       
         </div>
