--- a/Homepage.html
+++ b/Homepage.html
@@ -292,7 +292,7 @@
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-               אירדוק נועד להקל על אי נוחות הקשור למצבים כמו דלקת אוזן תיכונה, גודש באוזניים וליקוי בתפקוד חצוצרה האוסטאכיוס. 
+               אירדוק נועד להקל על אי נוחות הקשור למצבים כמו דלקת אוזן תיכונה, גודש באוזניים וליקוי בתפקוד תעלת האוסטיאכן (חצוצרת השמע).
                 ייתכן שהוא לא יהיה יעיל לכל בעיות האוזניים, ומומלץ להתייעץ עם גורם מקצועי רפואי לצורך אבחון וטיפול מתאימים.
             </div>
         </div>
