--- a/Homepage.html
+++ b/Homepage.html
@@ -279,7 +279,7 @@
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
                 כן, אירדוק מתאים לילדים/ות אך יש להשתמש בו בהשגחת מבוגר/ת. 
-                יש להקפיד תמיד על הנחיות הבטיחות ולהתייעץ עם רופא/ה במקרה של ספק.
+                יש להקפיד תמיד על הנחיות הבטיחות ולהתייעץ עם גורם רפואי במקרה של ספק.
             </div>
         </div>
     </div>
