--- a/Homepage.html
+++ b/Homepage.html
@@ -319,7 +319,8 @@
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-אם חווית אי נוחות, יש לכוון את עוצמת הרטט לנמוכה יותר. במידה והאי נוחות ממשיכה יש להפסיק ולהתייעץ עם גורם מקצועי.
+במידה ותחושת האי נוחות ממשיכה,
+                יש לכוון את עוצמת הרטט לנמוכה יותר. במידה והאי נוחות ממשיכה יש להפסיק ולהתייעץ עם גורם מקצועי.
             </div>
         </div>
     </div>
