--- a/Homepage.html
+++ b/Homepage.html
@@ -319,7 +319,7 @@
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-במידה ותחושת האי נוחות ממשיכה,
+במידה וחווית אי נוחות   ,
                 יש לכוון את עוצמת הרטט לנמוכה יותר. במידה והאי נוחות ממשיכה יש להפסיק ולהתייעץ עם גורם מקצועי.
             </div>
         </div>
