--- a/Homepage.html
+++ b/Homepage.html
@@ -320,7 +320,7 @@
         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
             <div class="accordion-body">
 במידה וחווית אי נוחות   ,
-                יש לכוון את עוצמת הרטט לנמוכה יותר. במידה והאי נוחות ממשיכה יש להפסיק ולהתייעץ עם גורם מקצועי.
+                יש לכוון את עוצמת הרטט לרמה נמוכה יותר. במידה והאי נוחות ממשיכה יש להפסיק ולהתייעץ עם גורם מקצועי.
             </div>
         </div>
     </div>
