--- a/Homepage.html
+++ b/Homepage.html
@@ -334,7 +334,7 @@
         </h2>
         <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                1. יש להחליף את סוללות ה- AA
+                1. יש להחליף את סוללות ה- AA.
                 <br>
                 2. יש לוודא כי הסוללה מותקנת בצורה נכונה.
                 <br>
