--- a/kidsPage.html
+++ b/kidsPage.html
@@ -180,7 +180,7 @@
     </div>
       <div class="content-parentinfo">
         <p> 
-          האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רופא. 
+        האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רפואי. 
           <strong>
             בניגוד לאנטיביוטיקה, הטיפול אינו פולשני ואינו גורם לתופעות לוואי.</strong>
       </p>
