--- a/kidsPage.html
+++ b/kidsPage.html
@@ -264,12 +264,14 @@
           </p>
           <div class="inline-container-kids">
               <p class="main-text">
-                  <strong>אם הרטט מפחיד את הילד/ה</strong>
+                  <strong>
+                      אם הרטט מפחיד את ילדך
+                  </strong>
                   <br>
 אפשר לתת לילדך לגעת בהמכשיר לאחר הפעלתו על מנת להרגיש את הרטט העדין. ניתן להסביר שהאירדוק אינו מפחיד ואינו מזיק.
               </p>
               <p class="main-text">
-                  <strong>אם הילד/ה חושש/ת מהשימוש במכשיר</strong>
+                  <strong>אם לילדך יש חששות מהשימוש במכשיר</strong>
                   <br>
                  אפשר להראות את סרטון ההמלצה הבא, בו נראה ילד שמשתמש באירדוק.
                             <span onclick="showPopup('Israel')" style="cursor: pointer; text-decoration: underline; color: #761dd5;     font-family: 'Assistant-bold';">  לצפייה בהמלצה</span>
