--- a/travlerPage.html
+++ b/travlerPage.html
@@ -158,7 +158,7 @@
         <p> 
           עיצובו הארגונומי של האירדוק הופך אותו למוצר קל לשימוש ולנשיאה בכל מקום. גודלו הקטן מאפשר לקחת אותו בתיק או במזוודה,
           <strong>
-            כך שתוכלו להקל על כאבי אוזניים גם במהלך הטיסה.
+            כך שניתן להקל על כאבי אוזניים גם במהלך הטיסה.
 </strong>
       
       </p>
