--- a/travlerPage.html
+++ b/travlerPage.html
@@ -174,7 +174,7 @@
     </div>
       <div class="content-travelinfo">
         <p> 
-          האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רופא. 
+          האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רפואי. 
           <strong>
             בניגוד לאנטיביוטיקה, הטיפול אינו פולשני ואינו גורם לתופעות לוואי.</strong>
       </p>
