--- a/swimmers.html
+++ b/swimmers.html
@@ -83,7 +83,7 @@
 
         </li>
         <li>
-            <h2 style="color: #0B8492" class="sw-info-h2"> Swimmer’s  ear </h2>
+            <h2 style="color: #0B8492" class="sw-info-h2"> Swimmer’s ear </h2>
             <p class="sw-info-p">
                 תופעה נפוצה בעיקר אצל שחיינים ושחייניות. במשך השחייה חודרים לאוזניים נוזלים שעלולים להיות מזוהמים ודלקתיים, אשר גורמים להרגשה של אי נוחות. מומלץ להשתמש באירדוק אחרי השחייה. המכשיר ינקז את הנוזלים ויגרום לתחושת הקלה.
 
@@ -152,7 +152,7 @@
           <p> 
             עיצובו הארגונומי של האירדוק הופך אותו למוצר קל לשימוש ולנשיאה בכל מקום. גודלו הקטן מאפשר לקחת אותו בתיק, 
             <strong>
-              כך שתוכלו להקל על כאבי אוזניים ישר אחרי השחייה.
+              כך שניתן להקל על כאבי אוזניים ישר אחרי השחייה.
   </strong>
         
         </p>
@@ -168,7 +168,7 @@
       </div>
         <div class="content-swinfo">
           <p> 
-            האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רופא. 
+            האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רפואי. 
             <strong>
               בניגוד לאנטיביוטיקה, הטיפול אינו פולשני ואינו גורם לתופעות לוואי.</strong>
         </p>
@@ -187,7 +187,7 @@
   
         <div class="content-swinfo">
           <p> 
-            מחקר שנעשה על מכשיר האירדוק מצביע על כך שמכשיר האירדוק יעיל בהקלת תסמיני ״אוזן שחיין״ באוזניים, כגון תחושת מלאות באוזניים הנגרמת מהצטברות נוזלים לאחר שחייה.
+            מחקר שנעשה על מכשיר האירדוק מצביע על כך שמכשיר האירדוק יעיל בהקלת תסמיני ״ Swimmer's ear ״ באוזניים, כגון תחושת מלאות באוזניים הנגרמת מהצטברות נוזלים לאחר שחייה.
             
             <a href="https://drive.google.com/file/d/1RtsGbNaHNL8G0TgyrAQAvZrAEzpxdEgX/view?usp=sharing" style="color: #0389c2; text-decoration: underline;    cursor: pointer">
               לקריאה נוספת
