--- a/swimmers.html
+++ b/swimmers.html
@@ -187,10 +187,10 @@
   
         <div class="content-swinfo">
           <p> 
-            מחקר שנעשה על מכשיר האירדוק מצביע על כך שמכשיר האירדוק יעיל בהקלת תסמיני ״ Swimmer's ear ״ באוזניים, כגון תחושת מלאות באוזניים הנגרמת מהצטברות נוזלים לאחר שחייה.
+            מחקר שנעשה על מכשיר האירדוק מצביע על כך שמכשיר האירדוק יעיל בהקלת תסמיני ״ Swimmer's ear ״ באוזניים, כגון תחושת מלאות באוזניים הנגרמת מהצטברות נוזלים לאחר שחייה
             
             <a href="https://drive.google.com/file/d/1RtsGbNaHNL8G0TgyrAQAvZrAEzpxdEgX/view?usp=sharing" style="color: #0389c2; text-decoration: underline;    cursor: pointer">
-              לקריאה נוספת
+              לקריאה נוספת.
 
             </a>   
             
