--- a/adult.html
+++ b/adult.html
@@ -206,7 +206,7 @@
       </div>
         <div class="content-adinfo">
           <p> 
-            האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רופא. 
+            האירדוק מציע פתרון נוח ונטול כאבים להקלת כאבי אוזניים, ללא צורך במרשם רפואי. 
             <strong>
               בניגוד לאנטיביוטיקה, הטיפול אינו פולשני ואינו גורם לתופעות לוואי.</strong>
         </p>
