--- a/adult.html
+++ b/adult.html
@@ -92,7 +92,7 @@
           <div class="panel">
           
             <p> 
-              דלקת זו פוגעת באוזן התיכונה, חלל קטן מאחורי עור התוף. גורמים: חיידקיים, נגיפיים ואלרגיים. התסמינים כוללים כאב אוזניים, התכווצות אוזניים, ירידה בשמיעה, הפרשות מהאוזן, וסחרחורת
+              דלקת זו פוגעת באוזן התיכונה, חלל קטן מאחורי עור התוף. גורמים: חיידקיים, נגיפיים ואלרגיים. התסמינים כוללים כאב אוזניים, התכווצות אוזניים, ירידה בשמיעה, הפרשות מהאוזן, וסחרחורת.
             </p>
               
           </div>
