--- a/adult.html
+++ b/adult.html
@@ -121,7 +121,7 @@
     
             <div class="panel">
               <p>
-                מצב זה גורם לתחושת רעשים באוזניים, כמו צלצולים או זמזום. טינטון יכול להיגרם על ידי חשיפה לרעשים חזקים, אובדן שמיעה, שימוש מסוים בתרופות, או מצבים רפואיים אחרים
+                מצב זה גורם לתחושת רעשים באוזניים, כמו צלצולים או זמזום. טינטון יכול להיגרם על ידי חשיפה לרעשים חזקים, אובדן שמיעה, שימוש מסוים בתרופות, או מצבים רפואיים אחרים.
               </p>
                  
             </div>
