--- a/Homepage.html
+++ b/Homepage.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-   
+    <button id="scrollUpBtn" onclick="scrollToTop()">> </button>
     
     <nav>
         <button id="nav-button" class="btn-mobile hide" onclick="toggleNavBar()">&#9776;</button>
