--- a/travlerPage.html
+++ b/travlerPage.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+     <button id="scrollUpBtn" onclick="scrollToTop()">> </button>
   <nav>
         <button id="nav-button" class="btn-mobile hide" onclick="toggleNavBar()">&#9776;</button>
         <div id="mobile-nav" class="sidenav">
