--- a/doctorPage.html
+++ b/doctorPage.html
@@ -351,7 +351,7 @@
       <p style="font-weight: bold;">
          
                 לפרטים נוספים על המחקר
-                שנערך על האירדוק            
+                שנערך על מכשיר האירדוק            
 
                     <a href="https://drive.google.com/file/d/1RtsGbNaHNL8G0TgyrAQAvZrAEzpxdEgX/view?usp=sharing" style="color: #0389c2; text-decoration: underline;">
 ניתן ללחוץ כאן.
